# duohaptics

./: CMakeLists.txt  README.md  duohaptics.pro  main.cpp
osc/: readme.txt
pd_examples/: PD_OSC.pd  readme.txt
stylus_proxy/: README.md  startstylus_com7.bat
